[project]
name = "kaggle-retail-sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts>=0.39.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "prophet>=1.3.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.1",
    "xgboost>=3.2.0",
]
